--- a/Colive/Colive_Website_Live/tncinclude.html
+++ b/Colive/Colive_Website_Live/tncinclude.html
@@ -1,4 +1,4 @@
-﻿
+﻿ranjith
 <!-- END of fixed call and chat buttons -->
 <section class="terms_and_conditions_additional_wrap">
     <div class="privacy_policy">
